scroll fix: move down scrollbar with scrollHeader

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -4290,7 +4290,7 @@ footer {
 
 .tabsSidebar-sidebarSpacer {
   margin-right: $sidebarWidth;
-  transition: margin 500ms;
+  transition: marginRight 500ms;
 }
 
 .tabsSidebar-sidebarSpacer.is-closed {
